# dpctl

./: .clang-format  .coveragerc  .flake8  .git-blame-ignore-revs  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  build_for_conda.sh  build_for_develop.bat  build_for_develop.sh  environment.yml  index.html  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini  versioneer.py
backends/: .gitignore  CMakeLists.txt  dbg_build.sh  warning.out
backends/include/: dppl_data_types.h  dppl_macros.hpp  dppl_opencl_interface.h  dppl_sycl_context_interface.h  dppl_sycl_device_interface.h  dppl_sycl_enum_types.h  dppl_sycl_event_interface.h  dppl_sycl_interface.hpp  dppl_sycl_kernel_interface.h  dppl_sycl_platform_interface.h  dppl_sycl_program_interface.h  dppl_sycl_queue_interface.h  dppl_sycl_queue_interface.hpp  dppl_sycl_queue_manager.h  dppl_sycl_types.h  dppl_sycl_usm_interface.h  dppl_utils.h  error_check_macros.h
backends/source/: dppl_opencl_interface.c  dppl_sycl_context_interface.cpp  dppl_sycl_device_interface.cpp  dppl_sycl_event_interface.cpp  dppl_sycl_interface.cpp  dppl_sycl_kernel_interface.cpp  dppl_sycl_platform_interface.cpp  dppl_sycl_program_interface.cpp  dppl_sycl_queue_interface.cpp  dppl_sycl_queue_manager.cpp  dppl_sycl_usm_interface.cpp  dppl_utils.cpp
backends/tests/: CMakeLists.txt  test_main.cpp  test_sycl_device_interface.cpp  test_sycl_kernel_interface.cpp  test_sycl_platform_interface.cpp  test_sycl_program_interface.cpp  test_sycl_queue_interface.cpp  test_sycl_queue_manager.cpp  test_sycl_usm_interface.cpp
docs/: .buildinfo  .gitignore  CMakeLists.txt  Doxyfile.in  README.md  conf.in  doc_versions.txt  doxyrest-config.lua.in  dpCtl.dptensor_api.html  dpCtl.dptensor_api.rst  dpCtl.memory_api.html  dpCtl.memory_api.rst  dpCtl.program_api.html  dpCtl.program_api.rst  dpCtl_api.html  dpCtl_api.rst  dpctl.program_api.rst  dpctl_api.rst  extlinks_gen.py  generate_rst.py  genindex.html  index.html  index.rst  index_doxyrest.rst.in  index_no_doxyrest.rst.in  objects.inv  py-modindex.html  requirements.txt  search.html  searchindex.js  toc_pyapi.html  toc_pyapi.rst
docs/.doctrees/: dpCtl.dptensor_api.doctree  dpCtl.memory_api.doctree  dpCtl.program_api.doctree  dpCtl_api.doctree  environment.pickle  index.doctree  toc_pyapi.doctree
docs/_legacy/: conf.in  extlinks_gen.py  generate_rst.py  index_doxyrest.rst.in
docs/_modules/: dpctl.html  index.html
docs/_sources/: dpCtl.dptensor_api.rst.txt  dpCtl.memory_api.rst.txt  dpCtl.program_api.rst.txt  dpCtl_api.rst.txt  index.rst.txt
docs/api/: class_view_hierarchy.html  define_CBindingWrapping_8h_1a0856bab1c65467280bf8c2062de4e3d5.html  define_CBindingWrapping_8h_1a65c769c08fa9fee7f298ad9c9eee5e05.html  define_DllExport_8h_1a81776019eae18623511d676145f7cdef.html  define_DllExport_8h_1aed0c117c235d99c414e0b5033d096785.html  define_ExternC_8h_1a03a64b28f62f6f38f6b8388a87a5a1fb.html  define_ExternC_8h_1a27152e7d3c3be9b99f89d313df56aef0.html  define_ExternC_8h_1a6956fffc46b54bcdd0e7fd53cd3a6619.html  define_ExternC_8h_1ad85f54ad0bab1d5206255e5920261be3.html  define_dpctl__data__types_8h_1a30654b4b67d97c42ca3f9b6052dda916.html  define_dpctl__data__types_8h_1ab21f12f372f67b8ff0aa3432336ede67.html  define_dpctl__data__types_8h_1acd69981d54c27fe0ff514645dbfc6359.html  define_dpctl__data__types_8h_1ad0d744f05898e32d01f73f8af3cd2071.html  define_dppl__data__types_8h_1a30654b4b67d97c42ca3f9b6052dda916.html  define_dppl__data__types_8h_1ab21f12f372f67b8ff0aa3432336ede67.html  define_dppl__data__types_8h_1acd69981d54c27fe0ff514645dbfc6359.html  define_dppl__data__types_8h_1ad0d744f05898e32d01f73f8af3cd2071.html  define_dppl__opencl__interface_8h_1a81776019eae18623511d676145f7cdef.html  define_error__check__macros_8h_1a3d05d4ff53571d917db5a64a5afe5ac5.html  define_error__check__macros_8h_1a5c5d67855b5c14a46bc1c285188ddcc1.html  define_error__check__macros_8h_1ac8b9ca6f31ac89dbfb2a35dd4cb7d24a.html  define_group__MEM__MGMT__ATTR__MACROS_1ga17fe5722d78d8ce138ca952889d07bc6.html  define_group__MEM__MGMT__ATTR__MACROS_1ga836492a42cdfef6419378dbf8d81f452.html  define_group__MEM__MGMT__ATTR__MACROS_1ga8afac1975b8353a1bd54ac25b2572d04.html  define_group__MEM__MGMT__ATTR__MACROS_1ga992ba513554faa4a42a193e0f31c4cb7.html  define_group__MEM__MGMT__ATTR__MACROS_1gaac2c75cb8f2e7c8a4ec7436cf1ad537f.html  define_group__MEM__MGMT__ATTR__MACROS_1gad4d9a56ef90f267f24386752c8f0d365.html  define_group__MEM__MGMT__ATTR__MACROS_1gad5917e4c2b4b0ab2b83b624964c60753.html  define_group__MEM__MGMT__ATTR__MACROS_1gadd48a0161309931574aed2025a16ade7.html  dir_backends.html  dir_backends_include.html  dir_backends_include_Support.html  dir_dpctl-capi.html  dir_dpctl-capi_include.html  dir_dpctl-capi_include_Support.html  dpCtl-CAPI_root.html  enum_dpctl__sycl__enum__types_8h_1a15d8954e4e712e2ec00838a9283d13ff.html  enum_dpctl__sycl__enum__types_8h_1a2b3d2dd8e0c358370eac0a59fb3fe089.html  enum_dpctl__sycl__enum__types_8h_1aa217d239d7e3752c49bd9fd42c71c933.html  enum_dppl__opencl__interface_8h_1a414d5545eb64717cf76cdfd716b67b29.html  (+252 more)
docs/cmake/: FindDoxyrest.cmake  FindSphinx.cmake
dpctl/: .gitignore  AGENTS.md  CMakeLists.txt  __init__.pxd  __init__.py  __main__.py  _backend.pxd  _dev.pyx  _device_selection.py  _diagnostics.pyx  _dtypes.py  _host_task_util.hpp  _init_helper.py  _memory.pxd  _memory.pyx  _sycl_context.pxd  _sycl_context.pyx  _sycl_core.pxd  _sycl_core.pyx  _sycl_device.pxd  _sycl_device.pyx  _sycl_device_factory.pxd  _sycl_device_factory.pyx  _sycl_device_manager.pxd  _sycl_device_manager.pyx  _sycl_event.pxd  _sycl_event.pyx  _sycl_platform.pxd  _sycl_platform.pyx  _sycl_queue.pxd  _sycl_queue.pyx  _sycl_queue_manager.pxd  _sycl_queue_manager.pyx  _sycl_timer.py  _version.py  backend.pxd  dparray.py  enum_types.py  memory.py  ocldrv.py  (+3 more)
dpctl-capi/: CMakeLists.txt  dbg_build.bat  dbg_build.sh  dbg_build_custom.sh
libsyclinterface/: AGENTS.md  CMakeLists.txt  dbg_build.bat  dbg_build.sh  dbg_build_custom.sh
(+75720 files in other folders)
